--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "backend-br.github.io",
+  "homepage": "https://backend-br.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,7 +8,12 @@
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.12"
   },
+  "devDependencies": {
+    "gh-pages": "^1.0.0"    
+  },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
