--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.12"
   },
   "devDependencies": {
-    "gh-pages": "^1.0.0"    
+    "gh-pages": "^1.0.0"
   },
   "scripts": {
     "predeploy": "npm run build",
