--- a/package.json
+++ b/package.json
@@ -5,8 +5,11 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "bootstrap": "3",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
+    "react-emoji-render": "^0.4.2",
     "react-scripts": "1.0.12"
   },
   "devDependencies": {
