--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "hexo": {
-    "version": ""
+    "version": "3.7.1"
   },
   "dependencies": {
     "hexo": "^3.2.0",
@@ -11,8 +11,8 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-liquid": "^0.2.0",
     "hexo-renderer-marked": "^0.3.0",
+    "hexo-renderer-mustache": "^1.0.0",
     "hexo-renderer-sass": "^0.3.2",
     "hexo-server": "^0.2.0"
   }
