--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-renderer-handlebars": "^2.0.2",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-mustache": "^1.0.0",
     "hexo-renderer-sass": "^0.3.2",
