--- a/package.json
+++ b/package.json
@@ -6,14 +6,23 @@
     "version": "3.7.1"
   },
   "dependencies": {
+    "bulma": "^0.7.1",
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
     "hexo-generator-category": "^0.1.3",
     "hexo-generator-index": "^0.2.0",
     "hexo-generator-tag": "^0.2.0",
+    "hexo-i18n": "^0.2.1",
     "hexo-renderer-handlebars": "^2.0.2",
     "hexo-renderer-marked": "^0.3.0",
     "hexo-renderer-sass": "^0.3.2",
     "hexo-server": "^0.2.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.24.7",
+    "gulp": "^3.9.1"
+  },
+  "scripts": {
+    "dev": "./node_modules/.bin/gulp"
   }
 }
