--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "devDependencies": {
     "browser-sync": "^2.24.7",
-    "gulp": "^3.9.1"
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.1"
   },
   "scripts": {
     "dev": "./node_modules/.bin/gulp"
