--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "gulp-babel": "^8.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-plumber": "^1.2.0",
-    "gulp-uglify": "^3.0.1"
+    "gulp-uglify": "^3.0.1",
+    "run-sequence": "^2.2.1"
   },
   "scripts": {
     "dev": "./node_modules/.bin/gulp",
