reorder tasks, add svg support and more

--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@babel/preset-env": "^7.1.0",
     "bulma": "^0.7.1",
+    "gulp-imagemin": "^4.1.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
+    "gulp-svg-symbols": "^3.2.0",
+    "gulp-svgmin": "^2.1.0",
     "handlebars-helpers": "^0.10.0",
     "hexo": "^3.2.0",
     "hexo-generator-archive": "^0.1.4",
