add fake psot add config post url add basic format for post list

--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,9 @@ slack: https://join.slack.com/t/backend-br/shared_invite/enQtMjQyOTM1MjQ5OTcyLTA
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://yoursite.com
+url: https://backendbrasil.com.br
 root: /
-permalink: :year/:month/:day/:title/
+permalink: :title/
 permalink_defaults:
 
 # Directory
