--- a/package.json
+++ b/package.json
@@ -45,6 +45,6 @@
   },
   "scripts": {
     "dev": "./node_modules/.bin/gulp",
-    "build": "./node_modules/.bin/gulp build"
+    "build": "./node_modules/.bin/hexo clean && ./node_modules/.bin/gulp build"
   }
 }
