--- a/themes/backendbrasil/_config.yml
+++ b/themes/backendbrasil/_config.yml
@@ -1,15 +1,39 @@
 language:
   - pt
-  - en
-
-node_sass:
-  outputStyle: compressed
-
-states:
-  - SP
-  - Brasília
 
 languages:
   - PHP
   - JavaScript
+  - Python
+  - Ruby
+  - Go
+
+states:
+  - Acre
+  - Alagoas
+  - Amapá
+  - Amazonas
+  - Bahia
+  - Ceará
+  - Brasília
+  - Espírito Santo
+  - Goiás
+  - Maranhão
+  - Mato Grosso
+  - Mato Grosso do Sul
+  - Minas Gerais
+  - Pará
+  - Paraíba
+  - Paraná
+  - Pernambuco
+  - Piauí
+  - Rio de Janeiro
+  - Rio Grande do Norte
+  - Rio Grande do Sul
+  - Rondônia
+  - Roraima
+  - Santa Catarina
+  - São Paulo
+  - Sergipe
+  - Tocantins
 
