--- a/themes/backendbrasil/_config.yml
+++ b/themes/backendbrasil/_config.yml
@@ -9,31 +9,30 @@ languages:
   - Go
 
 states:
-  - Acre
-  - Alagoas
-  - Amapá
-  - Amazonas
-  - Bahia
-  - Ceará
-  - Brasília
-  - Espírito Santo
-  - Goiás
-  - Maranhão
-  - Mato Grosso
-  - Mato Grosso do Sul
-  - Minas Gerais
-  - Pará
-  - Paraíba
-  - Paraná
-  - Pernambuco
-  - Piauí
-  - Rio de Janeiro
-  - Rio Grande do Norte
-  - Rio Grande do Sul
-  - Rondônia
-  - Roraima
-  - Santa Catarina
-  - São Paulo
-  - Sergipe
-  - Tocantins
-
+  AC: Acre
+  AL: Alagoas
+  AP: Amapá
+  AM: Amazonas
+  BA: Bahia
+  CE: Ceará
+  DF: Brasília
+  ES: Espírito Santo
+  GO: Goiás
+  MA: Maranhão
+  MT: Mato Grosso
+  MS: Mato Grosso do Sul
+  MG: Minas Gerais
+  PA: Pará
+  PB: Paraíba
+  PR: Paraná
+  PE: Pernambuco
+  PI: Piauí
+  RJ: Rio de Janeiro
+  RN: Rio Grande do Norte
+  RS: Rio Grande do Sul
+  RO: Rondônia
+  RR: Roraima
+  SC: Santa Catarina
+  SP: São Paulo
+  SE: Sergipe
+  TO: Tocantins
